--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: bet-analyzer
+    name: bet-xrd-morphology-analyzer
     env: python
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: streamlit run app.py --server.port $PORT --server.address=0.0.0.0
