--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,8 @@
-streamlit>=1.28.0
-numpy>=1.24.0
-pandas>=2.0.0
-scipy>=1.11.0
-matplotlib>=3.7.0
-openpyxl>=3.1.0
-xlrd==2.0.1
-lxml
-
-
-
+streamlit==1.28.0
+numpy==1.24.0
+pandas==2.0.0
+scipy==1.11.0
+matplotlib==3.7.0
+openpyxl==3.1.0
+xlrd==2.0.1  # For old .xls files
+chardet==5.2.0  # For encoding detection
