--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
-    name: bet-xrd-morphology-analyzer
+    name: bet-analyzer
     env: python
     plan: free
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
     startCommand: streamlit run app.py --server.port $PORT --server.address=0.0.0.0
+
