--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,6 @@ services:
     env: python
     plan: free
     buildCommand: |
-      pip install --upgrade pip setuptools wheel
-      pip install -r requirements.txt
-    startCommand: streamlit run app.py --server.port $PORT --server.address=0.0.0.0
+      python3.10 -m pip install --upgrade pip
+      python3.10 -m pip install -r requirements.txt
+    startCommand: python3.10 -m streamlit run app.py --server.port $PORT --server.address=0.0.0.0
