--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,17 @@
 services:
   - type: web
-    name: bet-analyzer
+    name: bet-xrd-morphology
     env: python
     plan: free
     buildCommand: |
-      # Force Python 3.10
-      python3.10 --version
+      # Disable Poetry explicitly
+      export POETRY_VIRTUALENVS_CREATE=false
       
-      # Upgrade pip and install dependencies
-      python3.10 -m pip install --upgrade pip
-      python3.10 -m pip install setuptools==68.2.2 wheel==0.42.0
-      python3.10 -m pip install -r requirements.txt
+      # Install without building numpy from source
+      pip install --upgrade pip
+      pip install numpy==1.26.4  # Version with Python 3.13 wheels
+      pip install -r requirements.txt
       
-      # Create Streamlit config
       mkdir -p ~/.streamlit/
       echo "[server]
       headless = true
@@ -21,5 +20,4 @@ services:
       enableXsrfProtection = false
       " > ~/.streamlit/config.toml
       
-    startCommand: python3.10 -m streamlit run app.py
-
+    startCommand: streamlit run app.py
