--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.28.0
-numpy==1.26.4  # Has wheels for Python 3.13
-pandas==2.2.1   # Compatible with numpy 1.26
-scipy==1.13.0   # Compatible with Python 3.13
-matplotlib==3.8.0
+numpy==1.24.3
+pandas==2.0.3
+scipy==1.11.4
+matplotlib==3.7.3
 openpyxl==3.1.2
 xlrd==2.0.1
