--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.28.0
 numpy==1.24.3
-pandas==2.0.3
-scipy==1.11.4
-matplotlib==3.7.3
+pandas==1.5.3  # Older version that works with Python 3.10
+scipy==1.10.1
+matplotlib==3.7.1
 openpyxl==3.1.2
 xlrd==2.0.1
