--- a/render.yaml
+++ b/render.yaml
@@ -3,21 +3,17 @@ services:
     name: bet-xrd-morphology
     env: python
     plan: free
-    # CRITICAL: Force pip, not Poetry
+    # Force pip, disable Poetry
     buildCommand: |
-      # Install Python 3.10 system packages
-      apt-get update && apt-get install -y python3.10 python3.10-dev python3.10-distutils
+      # Explicitly disable Poetry
+      export POETRY_VIRTUALENVS_CREATE=false
+      unset PIP_REQUIRE_VIRTUALENV
       
-      # Set Python 3.10 as default
-      update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.10 1
-      update-alternatives --set python3 /usr/bin/python3.10
-      
-      # Install pip for Python 3.10
-      curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
+      # Upgrade pip and install setuptools first
+      pip install --upgrade pip setuptools==68.2.2 wheel==0.42.0
       
       # Install requirements
-      python3.10 -m pip install --upgrade pip setuptools wheel
-      python3.10 -m pip install -r requirements.txt
+      pip install -r requirements.txt
       
       # Create Streamlit config
       mkdir -p ~/.streamlit/
@@ -28,4 +24,4 @@ services:
       enableXsrfProtection = false
       " > ~/.streamlit/config.toml
       
-    startCommand: python3.10 -m streamlit run app.py
+    startCommand: streamlit run app.py
